Dark mode toggle issue fix

--- a/src/components/InfoDialog.css
+++ b/src/components/InfoDialog.css
@@ -167,6 +167,21 @@ html[data-theme=dark] {
 	justify-content: space-evenly;
 }
 
+.noselect {
+	-webkit-touch-callout: none;
+	/* iOS Safari */
+	-webkit-user-select: none;
+	/* Safari */
+	-khtml-user-select: none;
+	/* Konqueror HTML */
+	-moz-user-select: none;
+	/* Old versions of Firefox */
+	-ms-user-select: none;
+	/* Internet Explorer/Edge */
+	user-select: none;
+	/* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
+  }
+
 /* phone */
 
 @media screen and (max-width: 767px) {
